margins fix; spacing issue

--- a/My-Work/Easier/easy.css
+++ b/My-Work/Easier/easy.css
@@ -12,6 +12,7 @@ body {
     margin-right: 124px;
     font-size: 16pt;
     border: 3px solid #292e74;
+    margin-bottom: 25px;
 }
 
 div.relative {
